Remove logical_date arguments
