# airflow/api_connexion/openapi/v1.yaml
@@ -4721,14 +4721,9 @@ components:
           description: The task ID.
           type: string
 
-        logical_date:
-          description: The logical date. Either set this or dag_run_id but not both.
-          type: string
-          format: datetime
-
         dag_run_id:
           description: |
-            The task instance's DAG run ID. Either set this or logical_date but not both.
+            The task instance's DAG run ID.
 
             *New in version 2.3.0*
           type: string
