# airflow/models/dag.py
@@ -27,6 +27,7 @@ import time
 from collections import defaultdict
 from contextlib import ExitStack
 from datetime import datetime, timedelta
+from functools import cache
 from typing import (
     TYPE_CHECKING,
     Any,
@@ -108,7 +109,6 @@ from airflow.timetables.simple import (
 )
 from airflow.utils import timezone
 from airflow.utils.dag_cycle_tester import check_cycle
-from airflow.utils.helpers import exactly_one
 from airflow.utils.log.logging_mixin import LoggingMixin
 from airflow.utils.session import NEW_SESSION, provide_session
 from airflow.utils.sqlalchemy import UtcDateTime, lock_rows, tuple_in_condition, with_row_locks
@@ -882,7 +882,6 @@ class DAG(TaskSDKDag, LoggingMixin):
     @provide_session
     def fetch_dagrun(
         dag_id: str,
-        logical_date: datetime | None = None,
         run_id: str | None = None,
         session: Session = NEW_SESSION,
     ) -> DagRun | DagRunPydantic:
@@ -890,28 +889,19 @@ class DAG(TaskSDKDag, LoggingMixin):
         Return the dag run for a given logical date or run_id if it exists, otherwise none.
 
         :param dag_id: The dag_id of the DAG to find.
-        :param logical_date: The logical date of the DagRun to find.
         :param run_id: The run_id of the DagRun to find.
         :param session:
         :return: The DagRun if found, otherwise None.
         """
-        if not (logical_date or run_id):
-            raise TypeError("You must provide either the logical_date or the run_id")
-        query = select(DagRun)
-        if logical_date:
-            query = query.where(DagRun.dag_id == dag_id, DagRun.logical_date == logical_date)
-        if run_id:
-            query = query.where(DagRun.dag_id == dag_id, DagRun.run_id == run_id)
-        return session.scalar(query)
+        return session.scalar(select(DagRun).where(DagRun.dag_id == dag_id, DagRun.run_id == run_id))
 
     @provide_session
     def get_dagrun(
         self,
-        logical_date: datetime | None = None,
         run_id: str | None = None,
         session: Session = NEW_SESSION,
     ) -> DagRun | DagRunPydantic:
-        return DAG.fetch_dagrun(dag_id=self.dag_id, logical_date=logical_date, run_id=run_id, session=session)
+        return DAG.fetch_dagrun(dag_id=self.dag_id, run_id=run_id, session=session)
 
     @provide_session
     def get_dagruns_between(self, start_date, end_date, session=NEW_SESSION):
@@ -1217,7 +1207,6 @@ class DAG(TaskSDKDag, LoggingMixin):
         *,
         task_id: str,
         map_indexes: Collection[int] | None = None,
-        logical_date: datetime | None = None,
         run_id: str | None = None,
         state: TaskInstanceState,
         upstream: bool = False,
@@ -1233,7 +1222,6 @@ class DAG(TaskSDKDag, LoggingMixin):
         :param task_id: Task ID of the TaskInstance
         :param map_indexes: Only set TaskInstance if its map_index matches.
             If None (default), all mapped TaskInstances of the task are set.
-        :param logical_date: Logical date of the TaskInstance
         :param run_id: The run_id of the TaskInstance
         :param state: State to set the TaskInstance to
         :param upstream: Include all upstream tasks of the given task_id
@@ -1243,9 +1231,6 @@ class DAG(TaskSDKDag, LoggingMixin):
         :param past: Include all past TaskInstances of the given task_id
         """
         from airflow.api.common.mark_tasks import set_state
-
-        if not exactly_one(logical_date, run_id):
-            raise ValueError("Exactly one of logical_date or run_id must be provided")
 
         task = self.get_task(task_id)
         task.dag = self
@@ -1258,7 +1243,6 @@ class DAG(TaskSDKDag, LoggingMixin):
 
         altered = set_state(
             tasks=tasks_to_set_state,
-            logical_date=logical_date,
             run_id=run_id,
             upstream=upstream,
             downstream=downstream,
@@ -1281,25 +1265,37 @@ class DAG(TaskSDKDag, LoggingMixin):
             include_upstream=False,
         )
 
-        if logical_date is None:
-            dag_run = session.scalars(
-                select(DagRun).where(DagRun.run_id == run_id, DagRun.dag_id == self.dag_id)
-            ).one()  # Raises an error if not found
-            resolve_logical_date = dag_run.logical_date
-        else:
-            resolve_logical_date = logical_date
+        # Raises an error if not found
+        dr_id, logical_date = session.execute(
+            select(DagRun.id, DagRun.logical_date).where(
+                DagRun.run_id == run_id, DagRun.dag_id == self.dag_id
+            )
+        ).one()
 
-        end_date = resolve_logical_date if not future else None
-        start_date = resolve_logical_date if not past else None
+        # Now we want to clear downstreams of tasks that had their state set...
+        clear_kwargs = {
+            "only_failed": True,
+            "session": session,
+            # Exclude the task itself from being cleared.
+            "exclude_task_ids": frozenset((task_id,)),
+        }
 
-        subdag.clear(
-            start_date=start_date,
-            end_date=end_date,
-            only_failed=True,
-            session=session,
-            # Exclude the task itself from being cleared
-            exclude_task_ids=frozenset({task_id}),
-        )
+        if not future and not past:  # Simple case 1: we're only dealing with exactly one run.
+            clear_kwargs["run_id"] = run_id
+        elif future and past:  # Simple case 2: we're clearing ALL runs.
+            subdag.clear(**clear_kwargs)
+        else:  # Complex cases: we may have more than one run, based on a date range.
+            # Make 'future' and 'past' make some sense when multiple runs exist
+            # for the same logical date. We order runs by their id and only
+            # clear runs have larger/smaller ids.
+            exclude_run_id_stmt = select(DagRun.run_id).where(DagRun.logical_date == logical_date)
+            if future:
+                clear_kwargs["start_date"] = logical_date
+                exclude_run_id_stmt = exclude_run_id_stmt.where(DagRun.id > dr_id)
+            else:
+                clear_kwargs["end_date"] = logical_date
+                exclude_run_id_stmt = exclude_run_id_stmt.where(DagRun.id < dr_id)
+            subdag.clear(exclude_run_ids=frozenset(session.scalars(exclude_run_id_stmt)), **clear_kwargs)
 
         return altered
 
@@ -1308,7 +1304,6 @@ class DAG(TaskSDKDag, LoggingMixin):
         self,
         *,
         group_id: str,
-        logical_date: datetime | None = None,
         run_id: str | None = None,
         state: TaskInstanceState,
         upstream: bool = False,
@@ -1322,7 +1317,6 @@ class DAG(TaskSDKDag, LoggingMixin):
         Set TaskGroup to the given state and clear downstream tasks in failed or upstream_failed state.
 
         :param group_id: The group_id of the TaskGroup
-        :param logical_date: Logical date of the TaskInstance
         :param run_id: The run_id of the TaskInstance
         :param state: State to set the TaskInstance to
         :param upstream: Include all upstream tasks of the given task_id
@@ -1334,22 +1328,8 @@ class DAG(TaskSDKDag, LoggingMixin):
         """
         from airflow.api.common.mark_tasks import set_state
 
-        if not exactly_one(logical_date, run_id):
-            raise ValueError("Exactly one of logical_date or run_id must be provided")
-
         tasks_to_set_state: list[BaseOperator | tuple[BaseOperator, int]] = []
         task_ids: list[str] = []
-
-        if logical_date is None:
-            dag_run = session.scalars(
-                select(DagRun).where(DagRun.run_id == run_id, DagRun.dag_id == self.dag_id)
-            ).one()  # Raises an error if not found
-            resolve_logical_date = dag_run.logical_date
-        else:
-            resolve_logical_date = logical_date
-
-        end_date = resolve_logical_date if not future else None
-        start_date = resolve_logical_date if not past else None
 
         task_group_dict = self.task_group.get_task_group_dict()
         task_group = task_group_dict.get(group_id)
@@ -1358,18 +1338,25 @@ class DAG(TaskSDKDag, LoggingMixin):
         tasks_to_set_state = [task for task in task_group.iter_tasks() if isinstance(task, BaseOperator)]
         task_ids = [task.task_id for task in task_group.iter_tasks()]
         dag_runs_query = select(DagRun.id).where(DagRun.dag_id == self.dag_id)
-        if start_date is None and end_date is None:
-            dag_runs_query = dag_runs_query.where(DagRun.logical_date == start_date)
-        else:
-            if start_date is not None:
-                dag_runs_query = dag_runs_query.where(DagRun.logical_date >= start_date)
-            if end_date is not None:
-                dag_runs_query = dag_runs_query.where(DagRun.logical_date <= end_date)
+
+        @cache
+        def get_logical_date() -> datetime:
+            stmt = select(DagRun.logical_date).where(DagRun.run_id == run_id, DagRun.dag_id == self.dag_id)
+            return session.scalars(stmt).one()  # Raises an error if not found
+
+        end_date = None if future else get_logical_date()
+        start_date = None if past else get_logical_date()
+
+        if future:
+            dag_runs_query = dag_runs_query.where(DagRun.logical_date <= start_date)
+        if past:
+            dag_runs_query = dag_runs_query.where(DagRun.logical_date >= end_date)
+        if not future and not past:
+            dag_runs_query = dag_runs_query.where(DagRun.run_id == run_id)
 
         with lock_rows(dag_runs_query, session):
             altered = set_state(
                 tasks=tasks_to_set_state,
-                logical_date=logical_date,
                 run_id=run_id,
                 upstream=upstream,
                 downstream=downstream,
@@ -1440,6 +1427,8 @@ class DAG(TaskSDKDag, LoggingMixin):
     def clear(
         self,
         task_ids: Collection[str | tuple[str, int]] | None = None,
+        *,
+        run_id: str | None = None,
         start_date: datetime | None = None,
         end_date: datetime | None = None,
         only_failed: bool = False,
@@ -1450,11 +1439,13 @@ class DAG(TaskSDKDag, LoggingMixin):
         session: Session = NEW_SESSION,
         dag_bag: DagBag | None = None,
         exclude_task_ids: frozenset[str] | frozenset[tuple[str, int]] | None = frozenset(),
+        exclude_run_ids: frozenset[str] | None = frozenset(),
     ) -> int | list[TaskInstance]:
         """
         Clear a set of task instances associated with the current dag for a specified date range.
 
         :param task_ids: List of task ids or (``task_id``, ``map_index``) tuples to clear
+        :param run_id: The DAG run ID to clear
         :param start_date: The minimum logical_date to clear
         :param end_date: The maximum logical_date to clear
         :param only_failed: Only clear failed tasks
@@ -1467,6 +1458,7 @@ class DAG(TaskSDKDag, LoggingMixin):
         :param dag_bag: The DagBag used to find the dags (Optional)
         :param exclude_task_ids: A set of ``task_id`` or (``task_id``, ``map_index``)
             tuples that should not be cleared
+        :param exclude_run_ids: A set of ``run_id`` that should not be cleared
         """
         state: list[TaskInstanceState] = []
         if only_failed:
@@ -1479,7 +1471,7 @@ class DAG(TaskSDKDag, LoggingMixin):
             task_ids=task_ids,
             start_date=start_date,
             end_date=end_date,
-            run_id=None,
+            run_id=run_id,
             state=state,
             include_dependent_dags=True,
             session=session,
